[package]
name = "pallet-offchain-worker"
version = "0.1.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
# SCALE encoding/decoding
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
# substrate primitives
sp-io = { version = "7.0.0", default-features=false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

log = { version = "0.4.18", default-features = false }
serde = { version = "1.0.160", default-features = false, features = ['derive'] }
serde_json = { version = '1.0.67', default-features = false, features = ['alloc'] }

# Features to support the native binary target for the runtime
[features]
default = ["std"]
std = [
  "frame-support/std", 
  "frame-system/std", 
  "codec/std", 
  "scale-info/std",
  "log/std",
  "sp-io/std",
  "sp-core/std"
]
